# superpod-blog

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
backend/: .env.example  Dockerfile  compose.yaml  minio-init.Dockerfile  pyproject.toml  requirements.txt
backend/agents/: agno_assist.py  simple_agent.py  web_agent.py
backend/app/: config.yaml  main.py  models.py
backend/db/: session.py
backend/modules/: langfuse.py
backend/scripts/: build_image.sh  dev_setup.sh  run_tests.sh
backend/teams/: multilingual_team.py  reasoning_finance_team.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_health.py
backend/workflows/: investment_workflow.py  research_workflow.py
frontend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  app.py  compose.yaml  compose.yml  db-init.Dockerfile  minio-init.Dockerfile  pyproject.toml
frontend/.chainlit/: config.toml
frontend/datalayer/: package-lock.json  package.json
frontend/modules/: agno.py  config.py  langfuse.py  logging.py  ollama.py
frontend/public/: custom.css
