[project]
name = "agents-os"
version = "1.0.0"
requires-python = ">=3.11,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno==2.3.21",
  "ddgs",
  "fastapi[standard]",
  "langfuse>=3.11.2",
  "ollama==0.6.1",
  "openai",
  "openinference-instrumentation-agno>=0.1.25",
  "opentelemetry-exporter-otlp>=1.39.1",
  "opentelemetry-sdk>=1.39.1",
  "pgvector",
  "psycopg[binary]",
  "requests",
  "sqlalchemy",
  "typer-slim[standard]>=0.21.0",
  "wikipedia",
]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [
  ".venv*",
  "workflows/investment_workflow.py",
  "workflows/research_workflow.py",
]

[[tool.mypy.overrides]]
module = [
  "pgvector.*",
  "setuptools.*",
  "nest_asyncio.*",
  "agno.*",
  "requests.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["workflows.investment_workflow", "workflows.research_workflow"]
ignore_errors = true

[tool.uv.pip]
no-annotate = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "-v",
  "--tb=short",
  "--strict-markers",
  "--disable-warnings",
  "--cov=app",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "docker: marks tests as docker-specific tests",
  "database: marks tests as database-specific tests",
]
