[project]
name = "chainlit-app"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<4"
authors = [{ name = "Leandro Pessini", email = "leandro@pessini.me" }]
dependencies = [
    "asyncpg>=0.31.0",
    "boto3>=1.42.14",
    "chainlit>=2.9.3",
    "ollama>=0.6.1",
]

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.uv.pip]
no-annotate = true
